<resources>
    <string name="app_name">Shopping</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_logout">Logout</string>

    <string name="tvAddToCart">Add To Cart</string>
    <string name="tvAlreadyInCart">Already In Cart</string>
    <string name="cartIsEmpty">Cart is Empty</string>
    <string name="tvBuy">Buy</string>
    <string name="tvBuyAll">Buy All</string>
    <string name="tvRemoveAllFromCart">Remove All From Cart</string>
    <string name="productImage">Product Image</string>

    <string name="isFavorite">Is Favorite</string>
    <string name="noFavorites">No Favorites</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="emailId">Email Id</string>
    <string name="phoneNo">Phone No</string>
    <string name="address">Address</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="itemAlreadyInCart">Item Already in Cart</string>
    <string name="logo">Logo</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="channel_name">test</string>
    <string name="channel_description">Test Button Click</string>
</resources>