<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools">

    <data>

        <variable
            name="product"
            type="com.example.shopping.model.Product" />

        <variable
            name="customClick"
            type="com.example.shopping.utility.CustomOnClick" />

        <import type="com.example.shopping.utility.Util" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorViolet">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                card_view:cardCornerRadius="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@{product.title}"
                        android:textAppearance="?attr/textAppearanceListItem"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imgProduct"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_below="@+id/tvTitle"
                        android:layout_centerVertical="true"
                        android:layout_marginBottom="10dp"
                        android:contentDescription="@string/productImage"
                        app:imageUrl="@{product.url}" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/llPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/imgProduct"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.9"
                            android:text="@{Util.getPriceFormattedString(product.price)}"
                            android:textAppearance="?attr/textAppearanceListItem"
                            android:textSize="17sp" />

                        <ImageView
                            android:id="@+id/imgIsFavorite"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@+id/tvPrice"
                            android:layout_weight="0.1"
                            android:contentDescription="@string/isFavorite"
                            android:onClick="@{(view) -> customClick.setCustomOnClickListener(view, product)}"
                            app:isFavorite="@{product.favorite}" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <TextView
                        android:id="@+id/tvDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/llPrice"
                        android:text="@{product.description}"
                        android:textAppearance="?attr/textAppearanceListItem" />

                    <Button
                        android:id="@+id/btnAddToCart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvDescription"
                        android:layout_marginTop="20dp"
                        android:text="@string/tvAddToCart" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </ScrollView>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>
</layout>